Add location Section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
           <li class="site-header__item">
             <a class="site-header__link" href="#contact">CONTACT</a>
           </li>
+          <li class="site-header__item">
+            <a class="site-header__link" href="#location">LOCATION</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -282,43 +285,51 @@
         </div>
         <ul class="project__list">
           <li class="project__item">
-            <img class="project__img" width="700" height="400" src="./images/executive.jpeg" alt="executive">
+            <a href="https://neon-marshmallow-a24d9e.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/executive.jpeg" alt="executive"></a>
             <div class="project__info">
               <h3 class="project__title2">Executive</h3>
               <p class="project__text2">"Executive" is a project created by me, this site is not yet available to the public</p>
-              <a class="hero__link" href="https://neon-marshmallow-a24d9e.netlify.app/" target="blank">Site Link</a>
+              <a class="hero__link hero__link--size" href="https://neon-marshmallow-a24d9e.netlify.app/" target="blank">Site Link</a>
             </div>
           </li>
           <li class="project__item">
-            <img class="project__img" width="700" height="400" src="./images/namanganliklar.jpeg" alt="executive">
+            <a href="https://clinquant-twilight-40c37f.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/namanganliklar.jpeg" alt="executive"></a>
             <div class="project__info">
               <h3 class="project__title2">Namanganliklar_24</h3>
               <p class="project__text2">"Namanganliklar-24" is a project created by me, this site is not yet available to the public</p>
-              <a class="hero__link" href="https://clinquant-twilight-40c37f.netlify.app/" target="blank">Site Link</a>
+              <a class="hero__link hero__link--size" href="https://clinquant-twilight-40c37f.netlify.app/" target="blank">Site Link</a>
             </div>
           </li>
           <li class="project__item">
-            <img class="project__img" width="700" height="400" src="./images/pixer.jpeg" alt="executive">
-            <div class="project__info">
+            <a href="https://clinquant-macaron-539f95.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/pixer.jpeg" alt="executive">
+              <div class="project__info"></a>
               <h3 class="project__title2">Pixer</h3>
               <p class="project__text2">"Pixer" is a project created by me, this site is not yet available to the public</p>
-              <a class="hero__link" href="https://clinquant-macaron-539f95.netlify.app/" target="blank">Site Link</a>
+              <a class="hero__link hero__link--size" href="https://clinquant-macaron-539f95.netlify.app/" target="blank">Site Link</a>
             </div>
           </li>
           <li class="project__item">
-            <img class="project__img" width="700" height="400" src="./images/coffee.jpeg" alt="executive">
-            <div class="project__info">
+            <a href="https://thriving-swan-8bc7d8.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/coffee.jpeg" alt="executive">
+              <div class="project__info"></a>
               <h3 class="project__title2">Coffeeroaster</h3>
               <p class="project__text2">"Coffeeroaster" is a project created by me, this site is not yet available to the public</p>
-              <a class="hero__link" href="https://thriving-swan-8bc7d8.netlify.app" target="blank">Site Link</a>
+              <a class="hero__link hero__link--size" href="https://thriving-swan-8bc7d8.netlify.app" target="blank">Site Link</a>
             </div>
           </li>
           <li class="project__item">
-            <img class="project__img" width="700" height="400" src="./images/short.jpeg" alt="executive">
-            <div class="project__info">
+            <a href="https://monumental-rugelach-29f4e5.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/short.jpeg" alt="executive">
+              <div class="project__info"></a>
               <h3 class="project__title2">Shortly</h3>
               <p class="project__text2">"Shortly" is a project created by me, this site is not yet available to the public</p>
-              <a class="hero__link" href="https://monumental-rugelach-29f4e5.netlify.app" target="blank">Site Link</a>
+              <a class="hero__link hero__link--size" href="https://monumental-rugelach-29f4e5.netlify.app" target="blank">Site Link</a>
+            </div>
+          </li>
+          <li class="project__item">
+            <a href="https://dynamic-narwhal-61ba6b.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/scoot.png" alt="executive"></a>
+            <div class="project__info">
+              <h3 class="project__title2">Scoot</h3>
+              <p class="project__text2">"Scoot" is a project created by me, this site is not yet available to the public</p>
+              <a class="hero__link hero__link--size" href="https://dynamic-narwhal-61ba6b.netlify.app/" target="blank">Site Link</a>
             </div>
           </li>
         </ul>
@@ -330,10 +341,19 @@
           <h2 class="contact__title">Contact</h2>
           <p class="contact__text">Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</p>
         </div>
-        <form action="asilbekbozorbeyev@gmail.com" method="post" autocomplete="off">
-          <input type="text" name="user_name" placeholder="NAME" aria-label="Enter your name" minlength="2" required>
-          <input type="email" name="user_email" placeholder="Email" aria-label="Enter your email" minlength="2" required>
+        <form class="contact__form" action="asilbekbozorbeyev@gmail.com" method="post" autocomplete="off">
+          <input class="contact__inp" type="text" name="user_name" placeholder="Enter Your Name" aria-label="Enter your name" minlength="2" required>
+          <input class="contact__inp" type="email" name="user_email" placeholder="Enter Your Email" aria-label="Enter your email" minlength="2" required>
+          <textarea class="contact__txtare" cols="30" rows="10" placeholder="Enter Your Message" name="user_message" aria-label="Write your message" minlength="2" required></textarea>
+          <button class="contact__btn contact__btn--hover" type="submit">SUBMIT</button>
         </form>
+      </div>
+    </section>
+    <section class="location" id="location">
+      <div class="container">
+        <h2 class="location__title">My Location</h2>
+        <div class="location__box" id="map">
+        </div>
       </div>
     </section>
   </main>
@@ -346,5 +366,7 @@
     </div>
   </footer>
   <!-- Site footer finish -->
+  <script src="./js/mapdata.js"></script>
+  <script src="./js/worldmap.js"></script>
 </body>
 </html>
