--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- Site header start -->
-  <header class="site-header">
+  <header class="site-header">  
     <div class="container">
       <div class="site-header__menu">
         <a class="logo" href="./index.html"><?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -71,29 +71,28 @@
           -248 0 0 -940z"/>
         </g>
       </svg>
-    </a>
-    <ul class="site-header__list">
+        </a>
+        <ul class="site-header__list">
       <li class="site-header__item">
-        <a class="site-header__link" href="#hero">HOME</a>
+        <a class="site-header__link" href="#hero" data-text="&nbsp;HOME&nbsp;">&nbsp;HOME&nbsp;</a>
       </li>
       <li class="site-header__item">
-        <a class="site-header__link" href="#about">ABOUT</a>
+        <a class="site-header__link" href="#about" data-text="&nbsp;ABOUT&nbsp;">&nbsp;ABOUT&nbsp;</a>
       </li>
       <li class="site-header__item">
-        <a class="site-header__link" href="#project">PROJECTS</a>
+        <a class="site-header__link" href="#project" data-text="&nbsp;PROJECTS&nbsp;">&nbsp;PROJECTS&nbsp;</a>
       </li>
       <li class="site-header__item">
-        <a class="site-header__link" href="#contact">CONTACT</a>
+        <a class="site-header__link" href="#contact" data-text="&nbsp;CONTACT&nbsp;">&nbsp;CONTACT&nbsp;</a>
       </li>
       <li class="site-header__item">
-        <a class="site-header__link" href="#location">LOCATION</a>
+        <a class="site-header__link" href="#location" data-text="&nbsp;LOCATION&nbsp;">&nbsp;LOCATION&nbsp;</a>
       </li>
-    </ul>
-  </div>
-</div>
-</header>
+        </ul>
+      </div>
+    </div>
+  </header>
 <!-- Site header finish -->
-
 <!-- Site main start -->
 <main class="site-main">
   <!-- Hero section start -->
@@ -135,10 +134,10 @@
         <a class="social__link" href="https://www.linkedin.com/in/king-asilbek-77a132240/" target="blank"><?xml version="1.0"?><?xml version="1.0"?><svg fill="#333" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="30" height="30">    <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"/></svg></a>
       </li>
     </ul>
+      </div>
+      <div class="magic"><span class="magic__span"></span></div>
   </div>
-  <div class="magic"><span class="magic__span"></span></div>
-</div>
-<a class="crown" href="#hero">
+    <a class="crown" href="#hero">
   <?xml version="1.0" standalone="no"?>
   <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
   "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
@@ -265,10 +264,9 @@
   12 -3 90 -23 172 -44z"/>
 </g>
 </svg>
-</a>
-</section>
-
-<section class="about" id="about">
+    </a>
+  </section>
+  <section class="about" id="about">
   <div class="container">
     <div class="about__box">
       <h2 class="about__title">ABOUT ME</h2>
@@ -289,8 +287,8 @@
           <span class="my__span">CSS</span>
           <span class="my__span">JavaScript</span>
         </div>
-      </div>
     </div>
+  </div>
   </section>
   <section class="project" id="project">
     <div class="container">
@@ -349,8 +347,8 @@
               </li>
             </ul>
           </div>
-        </section>
-        <section class="contact" id="contact">
+  </section>
+  <section class="contact" id="contact">
           <div class="container">
             <div class="contact__info">
               <h2 class="contact__title">Contact</h2>
@@ -363,19 +361,19 @@
               <button class="contact__btn contact__btn--hover" type="submit">SUBMIT</button>
             </form>
           </div>
-        </section>
-        <section class="location" id="location">
+  </section>
+  <section class="location" id="location">
           <div class="container">
             <h2 class="location__title">My Location</h2>
             <div class="location__box" id="map">
             </div>
           </div>
-        </section>
-      </main>
+  </section>
+</main>
       <!-- Site main finish -->
       
       <!-- Site footer start -->
-      <footer class="site-footer">
+  <footer class="site-footer">
         <div class="container">
           <div class="site-footer start-box">
             <div class="start-box__info">
