Add finished codes

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         </div>
       </div>
       <hr>
-      <p class="site-footer__text">© Copyright 2022. Made by Ram Maheshwari</p>
+      <p class="site-footer__text">© Copyright 2022. Made by Asilbek Bozorboyev</p>
     </div>
   </footer>
   <!-- Site footer finish -->
