--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
               <h2 class="contact__title">Contact</h2>
               <p class="contact__text">Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</p>
             </div>
-            <form class="contact__form" action="asilbekbozorbeyev@gmail.com" method="post" autocomplete="off">
+            <form class="contact__form" action="https://echo.htmlacademy.ru/" method="post" autocomplete="off">
               <input class="contact__inp" type="text" name="user_name" placeholder="Enter Your Name" aria-label="Enter your name" minlength="2" required>
               <input class="contact__inp" type="email" name="user_email" placeholder="Enter Your Email" aria-label="Enter your email" minlength="2" required>
               <textarea class="contact__txtare" cols="30" rows="10" placeholder="Enter Your Message" name="user_message" aria-label="Write your message" minlength="2" required></textarea>
@@ -385,7 +385,7 @@
               <p class="school__text">My Schools</p>
               <div class="school_box">
                 <a href="https://najottalim.uz/" target="blank"> <img width="100" height="80" src="./images/Najot_Talim-01.png" alt="Najot talim logo"></a>
-                <a href="https://www.instagram.com/change_it_academy/" target="blank"> <?xml version="1.0" standalone="no"?>
+                <a href="https://taplink.cc/change_it_academy" target="blank"> <?xml version="1.0" standalone="no"?>
                   <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
                   "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
                   <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
