--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
       </div>
       <ul class="project__list">
         <li class="project__item">
-          <a href="https://neon-marshmallow-a24d9e.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/executive.jpeg" alt="executive"></a>
+          <a href="https://comfy-tanuki-b2c365.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/clinic.png" alt="clinic"></a>
           <div class="project__info">
-            <h3 class="project__title2">Executive</h3>
-            <p class="project__text2">"Executive" is a project created by me, this site is not yet available to the public</p>
-            <a class="hero__link hero__link--size" href="https://neon-marshmallow-a24d9e.netlify.app/" target="blank">Site Link</a>
+            <h3 class="project__title2">Clinic</h3>
+            <p class="project__text2">"Clinic" is a project created by me, this site is not yet available to the public</p>
+            <a class="hero__link hero__link--size" href="https://comfy-tanuki-b2c365.netlify.app/" target="blank">Site Link</a>
           </div>
         </li>
         <li class="project__item">
