--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <section class="hero" id="hero">
     <div class="container">
       <div class="hero__box">
-        <h1 class="hero__title">HEY, I'M Asilbek</h1>
+        <h1 class="hero__title" data-text="&nbsp;HEY, I'M ASILBEK&nbsp;">&nbsp;HEY, I'M ASILBEK&nbsp;</h1>
         <p class="hero__text">A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product</p>
         <a class="hero__link" href="#project">PROJECTS</a>
       </div>
