--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
               <h2 class="contact__title">Contact</h2>
               <p class="contact__text">Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</p>
             </div>
-            <form class="contact__form" action="mailto:asilbekbozorbeyev@gmail.com" method="post" autocomplete="off">
+            <form class="contact__form" action="https://formsubmit.co/asilbekbozorbeyev@gmail.com" method="post" autocomplete="off">
               <input class="contact__inp" type="text" name="user_name" placeholder="Enter Your Name" aria-label="Enter your name" minlength="2" required>
               <input class="contact__inp" type="email" name="user_email" placeholder="Enter Your Email" aria-label="Enter your email" minlength="2" required>
               <textarea class="contact__txtare" cols="30" rows="10" placeholder="Enter Your Message" name="user_message" aria-label="Write your message" minlength="2" required></textarea>
