--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./images/26-263304_king-crown-svg-free-hd-png-download.svg" type="image/icon type">
   <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <title>Asilbek-17</title>
   <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
   <link rel="stylesheet" href="./css/main.css">
@@ -75,8 +74,8 @@
           -248 0 0 -940z"/>
         </g>
       </svg>
-        </a>
-        <ul class="site-header__list">
+    </a>
+    <ul class="site-header__list">
       <li class="site-header__item">
         <a class="site-header__link" href="#hero" data-text="&nbsp;HOME&nbsp;">&nbsp;HOME&nbsp;</a>
       </li>
@@ -92,10 +91,10 @@
       <li class="site-header__item">
         <a class="site-header__link" href="#location" data-text="&nbsp;LOCATION&nbsp;">&nbsp;LOCATION&nbsp;</a>
       </li>
-        </ul>
-      </div>
-    </div>
-  </header>
+    </ul>
+  </div>
+</div>
+</header>
 <!-- Site header finish -->
 <!-- Site main start -->
 <main class="site-main">
@@ -138,10 +137,10 @@
         <a class="social__link1" href="https://www.linkedin.com/in/king-asilbek-77a132240/" target="blank"><?xml version="1.0"?><?xml version="1.0"?><svg fill="#333" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="30" height="30">    <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"/></svg></a>
       </li>
     </ul>
-      </div>
-      <div class="magic"><span class="magic__span"></span></div>
   </div>
-    <a class="crown" href="#hero">
+  <div class="magic"><span class="magic__span"></span></div>
+</div>
+<a class="crown" href="#hero">
   <?xml version="1.0" standalone="no"?>
   <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
   "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
@@ -268,9 +267,9 @@
   12 -3 90 -23 172 -44z"/>
 </g>
 </svg>
-    </a>
-  </section>
-  <section class="about" id="about">
+</a>
+</section>
+<section class="about" id="about">
   <div class="container">
     <div class="about__box">
       <h2 class="about__title">ABOUT ME</h2>
@@ -291,8 +290,8 @@
           <span class="my__span">CSS</span>
           <span class="my__span">JavaScript</span>
         </div>
+      </div>
     </div>
-  </div>
   </section>
   <section class="project" id="project">
     <div class="container">
@@ -351,8 +350,8 @@
               </li>
             </ul>
           </div>
-  </section>
-  <section class="contact" id="contact">
+        </section>
+        <section class="contact" id="contact">
           <div class="container">
             <div class="contact__info">
               <h2 class="contact__title">Contact</h2>
@@ -365,19 +364,19 @@
               <button class="contact__btn contact__btn--hover" type="submit">SUBMIT</button>
             </form>
           </div>
-  </section>
-  <section class="location" id="location">
+        </section>
+        <section class="location" id="location">
           <div class="container">
             <h2 class="location__title">My Location</h2>
             <div class="location__box" id="map">
             </div>
           </div>
-  </section>
-</main>
+        </section>
+      </main>
       <!-- Site main finish -->
       
       <!-- Site footer start -->
-  <footer class="site-footer">
+      <footer class="site-footer">
         <div class="container">
           <div class="site-footer start-box">
             <div class="start-box__info">
