--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <title>Asilbek-17</title>
-  <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
+  <link rel="stylesheet" href="./css/aos.css">
   <link rel="stylesheet" href="./css/main.css">
-  <!-- <link rel="stylesheet" href="./css/main.min.css"> -->
+  <title>Asilbek-17</title>
 </head>
 <body>
   <!-- Site header start -->
@@ -301,7 +300,7 @@
       </div>
       <ul class="project__list">
         <li class="project__item">
-          <a href="https://comfy-tanuki-b2c365.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/clinic.png" alt="clinic"></a>
+          <a href="https://comfy-tanuki-b2c365.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/clinic.png" alt="clinic" data-aos="zoom-in-up"></a>
           <div class="project__info">
             <h3 class="project__title2">Clinic</h3>
             <p class="project__text2">"Clinic" is a project created by me, this site is not yet available to the public</p>
@@ -309,15 +308,15 @@
           </div>
         </li>
         <li class="project__item">
-          <a href="https://clinquant-twilight-40c37f.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/namanganliklar.jpeg" alt="executive"></a>
+          <a href="https://merry-melomakarona-f71052.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/digitial.png" alt="digitial" data-aos="zoom-in-up"></a>
           <div class="project__info">
-            <h3 class="project__title2">Namanganliklar_24</h3>
-            <p class="project__text2">"Namanganliklar-24" is a project created by me, this site is not yet available to the public</p>
-            <a class="hero__link hero__link--size" href="https://clinquant-twilight-40c37f.netlify.app/" target="blank">Site Link</a>
+            <h3 class="project__title2">Digital Marketing</h3>
+            <p class="project__text2">"Digital Marketing" is a project created by me, this site is not yet available to the public</p>
+            <a class="hero__link hero__link--size" href="https://merry-melomakarona-f71052.netlify.app/" target="blank">Site Link</a>
           </div>
         </li>
         <li class="project__item">
-          <a href="https://clinquant-macaron-539f95.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/pixer.jpeg" alt="executive">
+          <a href="https://clinquant-macaron-539f95.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/pixer.jpeg" alt="executive" data-aos="zoom-in-up">
             <div class="project__info"></a>
               <h3 class="project__title2">Pixer</h3>
               <p class="project__text2">"Pixer" is a project created by me, this site is not yet available to the public</p>
@@ -325,7 +324,7 @@
             </div>
           </li>
           <li class="project__item">
-            <a href="https://thriving-swan-8bc7d8.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/coffee.jpeg" alt="executive">
+            <a href="https://thriving-swan-8bc7d8.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/coffee.jpeg" alt="executive" data-aos="zoom-in-up">
               <div class="project__info"></a>
                 <h3 class="project__title2">Coffeeroaster</h3>
                 <p class="project__text2">"Coffeeroaster" is a project created by me, this site is not yet available to the public</p>
@@ -333,15 +332,15 @@
               </div>
             </li>
             <li class="project__item">
-              <a href="https://monumental-rugelach-29f4e5.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/short.jpeg" alt="executive">
+              <a href="https://startling-frangipane-2e5ea1.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/movies.png" alt="movies" data-aos="zoom-in-up">
                 <div class="project__info"></a>
-                  <h3 class="project__title2">Shortly</h3>
-                  <p class="project__text2">"Shortly" is a project created by me, this site is not yet available to the public</p>
-                  <a class="hero__link hero__link--size" href="https://monumental-rugelach-29f4e5.netlify.app" target="blank">Site Link</a>
+                  <h3 class="project__title2">Movies</h3>
+                  <p class="project__text2">"Movies" is a project created by me, this site is not yet available to the public</p>
+                  <a class="hero__link hero__link--size" href="https://startling-frangipane-2e5ea1.netlify.app" target="blank">Site Link</a>
                 </div>
               </li>
               <li class="project__item">
-                <a href="https://dynamic-narwhal-61ba6b.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/scoot.png" alt="executive"></a>
+                <a href="https://dynamic-narwhal-61ba6b.netlify.app/" target="blank"><img class="project__img" width="350" height="200" src="./images/scoot.png" alt="executive" data-aos="zoom-in-up"></a>
                 <div class="project__info">
                   <h3 class="project__title2">Scoot</h3>
                   <p class="project__text2">"Scoot" is a project created by me, this site is not yet available to the public</p>
@@ -358,9 +357,9 @@
               <p class="contact__text">Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</p>
             </div>
             <form class="contact__form" action="https://formsubmit.co/asilbekbozorbeyev@gmail.com" method="POST" autocomplete="off">
-              <input class="contact__inp" type="text" name="user_name" placeholder="Enter Your Name" aria-label="Enter your name" minlength="2" required>
-              <input class="contact__inp" type="email" name="user_email" placeholder="Enter Your Email" aria-label="Enter your email" minlength="2" required>
-              <textarea class="contact__txtare" cols="30" rows="10" placeholder="Enter Your Message" name="user_message" aria-label="Write your message" minlength="2" required></textarea>
+              <input class="contact__inp" type="text" name="name" placeholder="Enter Your Name" aria-label="Enter your name" minlength="2" required>
+              <input class="contact__inp" type="email" name="email" placeholder="Enter Your Email" aria-label="Enter your email" minlength="2" required>
+              <textarea class="contact__txtare" cols="30" rows="10" placeholder="Enter Your Message" name="message" aria-label="Write your message" minlength="2" required></textarea>
               <button class="contact__btn contact__btn--hover" type="submit">SUBMIT</button>
             </form>
           </div>
@@ -469,6 +468,8 @@
     </div>
   </footer>
   <!-- Site footer finish -->
+  <script src="//code.jivo.ru/widget/WVnuVWT1j6" async></script>
+  <script src="./js/aos.js"></script>
   <script src="./js/main.js"></script>
   <script src="./js/mapdata.js"></script>
   <script src="./js/worldmap.js"></script>
