Add two react apps

--- a/index.html
+++ b/index.html
@@ -287,7 +287,10 @@
           <h3 class="my__title">My Skills</h3>
           <span class="my__span">HTML</span>
           <span class="my__span">CSS</span>
+          <span class="my__span">Bootstrap</span>
+          <span class="my__span">SASS/SCSS</span>
           <span class="my__span">JavaScript</span>
+          <span class="my__span">REACT</span>
         </div>
       </div>
     </div>
@@ -324,19 +327,19 @@
             </div>
           </li>
           <li class="project__item">
-            <a href="https://thriving-swan-8bc7d8.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/coffee.jpeg" alt="executive" data-aos="zoom-in-up">
+            <a href="https://food-pos-dark-hj4xcj4tx-asilbek-17.vercel.app/home/hotdishes" target="blank"><img class="project__img" width="350" height="200" src="./images/food-app.png" alt="executive" data-aos="zoom-in-up">
               <div class="project__info"></a>
-                <h3 class="project__title2">Coffeeroaster</h3>
-                <p class="project__text2">"Coffeeroaster" is a project created by me, this site is not yet available to the public</p>
-                <a class="hero__link hero__link--size" href="https://thriving-swan-8bc7d8.netlify.app" target="blank">Site Link</a>
+                <h3 class="project__title2">Food App React</h3>
+                <p class="project__text2">"Food App React" is a project created by me, this site is not yet available to the public</p>
+                <a class="hero__link hero__link--size" href="https://food-pos-dark-hj4xcj4tx-asilbek-17.vercel.app/home/hotdishes" target="blank">Site Link</a>
               </div>
             </li>
             <li class="project__item">
-              <a href="https://startling-frangipane-2e5ea1.netlify.app" target="blank"><img class="project__img" width="350" height="200" src="./images/movies.png" alt="movies" data-aos="zoom-in-up">
+              <a href="https://movies-react-tan.vercel.app" target="blank"><img class="project__img" width="350" height="200" src="./images/Movies-react.png" alt="movies" data-aos="zoom-in-up">
                 <div class="project__info"></a>
-                  <h3 class="project__title2">Movies</h3>
-                  <p class="project__text2">"Movies" is a project created by me, this site is not yet available to the public</p>
-                  <a class="hero__link hero__link--size" href="https://startling-frangipane-2e5ea1.netlify.app" target="blank">Site Link</a>
+                  <h3 class="project__title2">Movies React App</h3>
+                  <p class="project__text2">"Movies React App" is a project created by me, this site is not yet available to the public</p>
+                  <a class="hero__link hero__link--size" href="https://movies-react-tan.vercel.app" target="blank">Site Link</a>
                 </div>
               </li>
               <li class="project__item">
